tests/sksl/errors/EmptyStruct.glsl
### Compilation failed:

error: 1: struct must contain at least one field
1 error
